fix header z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,7 +67,7 @@ header {
     width: 100%;
     height: 60px;
     top: 0;
-    z-index: 1;
+    z-index: 2;
 }
 header > div {
     height: 100%;
